sandbox-codebase/objects/heymarket__Sync_Object_Field__c/heymarket__Sync_Object_Field__c.object-meta.xml
<CustomObject>
    <description>Stores mapping for fields for a given sync object.</description>
    <label>Sync Object Field</label>
    <nameField>
        <displayFormat>SOF-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Object Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>