sandbox-codebase/objects/heymarket__Sync_Object_Field__c/fields/heymarket__HM_Field__c.field-meta.xml
<CustomField>
    <fullName>heymarket__HM_Field__c</fullName>
    <description>ID of HM Field</description>
    <label>HM Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>