sandbox-codebase/objects/heymarket__Sync_Object_Field__c/fields/heymarket__SF_Field__c.field-meta.xml
<CustomField>
    <fullName>heymarket__SF_Field__c</fullName>
    <description>API Name of the SF Field.</description>
    <label>SF Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>